--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     </head>
     <body>
         <header>
-            <h1> RUN BUDDY</h1>
+            <h1>
+                <a href="/"></a>RUN BUDDY
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                   <li>
+                       <a href="#what-you-do">What You Do
+                       </a>
+                   </li>
+                   <li>
+                    <a href="#Your Traingers">Your Trainers
+                    </a>
+                    </li>
+                     <li>
+                    <a href="Reach Out">Reach Out</a>
+                     </li>
+                </ul>
+            </nav>
         </header>
         <section>
            <h2>What We Do</h2> 
