--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                        </a>
                    </li>
                    <li>
-                    <a href="#Your Traingers">Your Trainers
-                    </a>
+                        <a href="#Your Traingers">Your Trainers
+                        </a>
                     </li>
-                     <li>
-                    <a href="Reach Out">Reach Out</a>
-                     </li>
+                    <li>
+                        <a href="#Reach Out">Reach Out
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header>
