--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <header>
-            <h1>
+            <h1
+                >
                 <a href="/"></a>RUN BUDDY
             </h1>
             <nav>
