--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <header>
-            <h1
-                >
+            <h1>
                 <a href="/"></a>RUN BUDDY
             </h1>
             <nav>
@@ -21,17 +20,17 @@
                        </a>
                    </li>
                    <li>
-                        <a href="#Your Traingers">Your Trainers
+                        <a href="#your-trainers">Your Trainers
                         </a>
                     </li>
                     <li>
-                        <a href="#Reach Out">Reach Out
+                        <a href="#reach-out">Reach Out
                         </a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <section class="hero">
+        <section class="hero" id="what-we-do">
             <div class="hero-form">
                <h2>What We Do</h2> 
                <h3>Get Started Today</h3>
@@ -48,7 +47,7 @@
                        <input type="radio" name="trainer-confirm" id="trainer-yes"/>
                        <label for="trainer-yes">Yes</label>
                        <input type="radio" name="trainer-confirm" id="trainer-no"/>
-                       <label for="trainer-no">Yes</label>
+                       <label for="trainer-no">No</label>
                    </p>
                    <p>
                     <label for="checkbox">
@@ -62,15 +61,44 @@
                </form>
            </div>
         </section>
-        <section>
+        <section id="what-you-do">
            <h2>What You Do</h2> 
+           
+           <div>
+               <img src="./assets/images/step-1.svg" alt="" />
+               <h3>Step 1: Fill Out the Form Above.</h3>
+               <p>You're a;ready here, so why not?</p>
+           </div>
+
+           <div>
+               <img src="./assets/images/step-2.svg"
+               <h3>Step 2: Consult with One of Our Trainers.</h3>
+               <p>Are you here to build muscle, lose weight, or just feel good?</p>
+           </div>
+
+           <div>
+               <img src="./assets/images/step-3.svg"
+               <h3>Step 3: Get Running.</h3>
+               <p>Hit the ground running (literally) once your trainer lay out your plan.</p>
+           </div>
+
+           <div>
+               <img src="./assets/images/step-4.svg"
+            <h3>Step 4: Se Results.</h3>
+            <p>Bi-wekly checkins with your trainer will keep you focused.</p>
+        </div>
         </section>
-        <section>
+
+        <section id="meet-the-trainers">
             <h2>Meet the Trainers</h2>
         </section>
-        <section>
+
+
+        <section id="reach-out">
             <h2>Reach Out</h2>
         </section>
+
+
         <footer>
             <h2>❤️Made with love by Run Buddy.</h2>
             <div>
