--- a/index.html
+++ b/index.html
@@ -60,36 +60,38 @@
                 </form>
             </div>
         </section>
+
         <section class="intro" id="what-we-do">
-            <h2>What We Do</h2> 
+            <h2 class="section-title primary-border">What We Do</h2> 
             <p>We do these type of things. This is what I wrote in inplace of the original text.</p>
         </section>
-        <section id="what-you-do">
-           <h2>What You Do</h2> 
+
+        <section id="what-you-do" class="steps">
+           <h2 class="section-title secondary-border">What You Do</h2> 
            
            <div>
                <img src="./assets/images/step-1.svg" alt="" />
-               <h3>Step 1: Fill Out the Form Above.</h3>
-               <p>You're a;ready here, so why not?</p>
+               <h3>Step 1:<span> Fill Out the Form Above.</span></h3>
+               <p>You're already here, so why not?</p>
            </div>
 
            <div>
-               <img src="./assets/images/step-2.svg"
-               <h3>Step 2: Consult with One of Our Trainers.</h3>
+               <img src="./assets/images/step-2.svg" alt="" />
+               <h3>Step 2: <span>With One of Our Trainers.</span> </h3>
                <p>Are you here to build muscle, lose weight, or just feel good?</p>
            </div>
 
            <div>
-               <img src="./assets/images/step-3.svg"
-               <h3>Step 3: Get Running.</h3>
+               <img src="./assets/images/step-3.svg" alt="" />
+               <h3>Step 3: <span>Get Running.</span></h3>
                <p>Hit the ground running (literally) once your trainer lay out your plan.</p>
            </div>
 
            <div>
-               <img src="./assets/images/step-4.svg"
-            <h3>Step 4: Se Results.</h3>
+            <img src="./assets/images/step-4.svg" alt="" />
+            <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-wekly checkins with your trainer will keep you focused.</p>
-        </div>
+            </div>
         </section>
 
         <section id="meet-the-trainers">
