--- a/index.html
+++ b/index.html
@@ -94,9 +94,46 @@
             </div>
         </section>
 
-        <section id="meet-the-trainers">
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title secondary-border">
+                Meet the Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eligendi quis animi exercitationem qui blanditiis accusamus expedita rerum. 
+                        Provident porro tempore atque debitis beatae voluptas architecto error eum aliquid? Voluptatibus, nostrum?
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eligendi quis animi exercitationem qui blanditiis accusamus expedita rerum. 
+                        Provident porro tempore atque debitis beatae voluptas architecto error eum aliquid? Voluptatibus, nostrum?
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
         </section>
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and holding commically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "The Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eligendi quis animi exercitationem qui blanditiis accusamus expedita rerum. 
+                    Provident porro tempore atque debitis beatae voluptas architecto error eum aliquid? Voluptatibus, nostrum?
+                </p>
+            </div>
+        </article>
 
 
         <section id="reach-out">
