display inline-block

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </section>
 
         <section class="intro" id="what-we-do">
-            <h2 class="section-title primary-border">What We Do</h2> 
+            <h2 class="section-title secondary-border">What We Do</h2> 
             <p>We do these type of things. This is what I wrote in inplace of the original text.</p>
         </section>
 
         <section id="what-you-do" class="steps">
-           <h2 class="section-title secondary-border">What You Do</h2> 
+           <h2 class="section-title primary-border">What You Do</h2> 
            
            <div>
                <img src="./assets/images/step-1.svg" alt="" />
