--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     style="border:0"
                     allowfullscreen=""
                     loading="lazy"
-                </iframe>"
+                </iframe>
                 <div class="contact-form">
                     <h3>Contact Us</h3>
                     <form>
