--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <br/>
                         P: 555.RUN.BUDZ (555.786.2839) 
                         <br />
-                        E: <a href="maito:info@runbuddy.io">info@runbuddy.io</a>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                     </address>
                 </div>
                
