--- a/index.html
+++ b/index.html
@@ -68,42 +68,80 @@
         </section>
 
         <section class="intro" id="what-we-do">
-            <h2 class="section-title secondary-border">What We Do</h2> 
-            <p>We do these type of things. This is what I wrote in inplace of the original text.</p>
-        </section>
-
-        <section id="what-you-do" class="steps">
-           <h2 class="section-title primary-border">What You Do</h2> 
-           
-           <div>
-               <img src="./assets/images/step-1.svg" alt="" />
-               <h3>Step 1:<span> Fill Out the Form Above.</span></h3>
-               <p>You're already here, so why not?</p>
-           </div>
-
-           <div>
-               <img src="./assets/images/step-2.svg" alt="" />
-               <h3>Step 2: <span>With One of Our Trainers.</span> </h3>
-               <p>Are you here to build muscle, lose weight, or just feel good?</p>
-           </div>
-
-           <div>
-               <img src="./assets/images/step-3.svg" alt="" />
-               <h3>Step 3: <span>Get Running.</span></h3>
-               <p>Hit the ground running (literally) once your trainer lay out your plan.</p>
-           </div>
-
-           <div>
-            <img src="./assets/images/step-4.svg" alt="" />
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-wekly checkins with your trainer will keep you focused.</p>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    What We Do
+                </h2> 
+            </div>
+            <div class="flex-row">
+                <p>
+                    We do these type of things. This is what I wrote in inplace of the original text.
+                </p>
             </div>
         </section>
 
+        <section id="what-you-do" class="steps">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What You Do
+                </h2> 
+            </div>
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt="" />
+                  </div>
+                  <div class="step-text">
+                    <h4>Fill Out The Form Above</h4>
+                    <p>You're already here, so why not?</p>
+                  </div>
+                </div>
+              </div>
+           <div class="step">
+               <h3>Step 2.</h3>
+               <div class="step-info">
+                   <div class="step-img">
+                    <img src="./assets/images/step-2.svg" alt="" />
+                   </div>
+                    <div class="step-text">
+                    <h4>Consult With One of Our Trainers</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+                </div>
+           </div>
+            <div class="step">
+                <h3>Step.3</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt=""/>
+                    </div>
+                    <div class="step-text">
+                        <h4>Get Running</h4>
+                        <p>Hit the ground running (literally) once your trainers lay out your plan.</p>
+                    </div>
+                </div>
+            </div>
+           <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                <img src="./assets/images/step-4.svg" alt="" />
+                </div>
+                <div class="step-text">
+                <h4>See Results</h4>
+                <p>Bi-wekly checkins with your trainer will keep you focused.</p>
+                </div>
+            </div>
+           </div>
+        </section>
+
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title secondary-border">
-                Meet the Trainers
-            </h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    Meet the Trainers
+                </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -141,7 +179,11 @@
             </div>
         </article>
         <section id="reach-out" class="contact">
-            <h2 class="section-title primary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Reach Out
+                </h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201876.99354290238!2d-122.375390981543!3d37.758906091461725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857d8b28aaed03%3A0x71b415d535759367!2sOakland%2C%20CA!5e0!3m2!1sen!2sus!4v1647813008941!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
                     width="600"
