--- a/index.html
+++ b/index.html
@@ -212,13 +212,15 @@
                         <button type="submit">Submit</button>
                     </form>
                 </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201876.99354290238!2d-122.375390981543!3d37.758906091461725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857d8b28aaed03%3A0x71b415d535759367!2sOakland%2C%20CA!5e0!3m2!1sen!2sus!4v1647813008941!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-                    width="600"
-                    height="450"
-                    style="border:0"
-                    allowfullscreen=""
-                    loading="lazy"
-                </iframe>
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201876.99354290238!2d-122.375390981543!3d37.758906091461725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857d8b28aaed03%3A0x71b415d535759367!2sOakland%2C%20CA!5e0!3m2!1sen!2sus!4v1647813008941!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                        width="600"
+                        height="450"
+                        style="border:0"
+                        allowfullscreen=""
+                        loading="lazy"
+                    </iframe>
+                </div>
             </div>
         </section>
 
